objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that determines whether the quantity is editable.</description>
        <inlineHelpText>Allow or prevent changing the quantity for this product.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultPricingTable__c</fullName>
        <label>Default Pricing Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segmented</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethodEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether Pricing Method may be changed when this product is added to quote.</description>
        <inlineHelpText>Select if Pricing Method can be changed when this product is added to quote.</inlineHelpText>
        <label>Pricing Method Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this product allows for price to be freely editable when building a quote</description>
        <inlineHelpText>Indicates this product allows for price to be freely editable when building a quote.</inlineHelpText>
        <label>Price Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount category assigned to this product.</description>
        <inlineHelpText>Specify discount category for this product.</inlineHelpText>
        <label>Discount Category</label>
        <referenceTo>SBQQ__DiscountCategory__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Type of pricing to use for this subscription. "None" means this product is not a subscription.</description>
        <inlineHelpText>Type of pricing to use for this subscription. "None" means this product is not a subscription.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term.</description>
        <inlineHelpText>Schedule for discounts based on subscription term.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Term Discounted Products</relationshipLabel>
        <relationshipName>TermDiscountedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountLevel__c</fullName>
        <description>Level of subscription term that's used to calculated term discount.</description>
        <inlineHelpText>Specify subscription term level that should be used in calculating term discount. Leave blank to indicate default.</inlineHelpText>
        <label>Term Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity.</description>
        <inlineHelpText>Discount rate compounded by quantity.</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Pricing method that should be applied to this product.</description>
        <inlineHelpText>Pricing method that should be applied to this product.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Term length of this subscription. Only applicable if the product is a subscription.</description>
        <inlineHelpText>Term length of this subscription. Only applicable if the product is a subscription.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as non discountable.</description>
        <inlineHelpText>Marks this product as not discountable.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HidePriceInSearchResults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product price should be displayed in the Product Search Results.</description>
        <inlineHelpText>Select checkbox to hide this product's price in the Product Search Results.</inlineHelpText>
        <label>Hide Price in Search Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__GenerateContractedPrice__c</fullName>
        <description>Will generate a contracted price based on the adjusted quote line if flagged.</description>
        <inlineHelpText>Will generate a contracted price based on the adjusted quote line if flagged.</inlineHelpText>
        <label>Generate Contracted Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Do Not Generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Determines how often this product will be invoiced.</description>
        <inlineHelpText>Determines how often this product will be invoiced.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPricingField__c</fullName>
        <description>Field used to calculate block pricing.</description>
        <inlineHelpText>Field used to calculate block pricing.</inlineHelpText>
        <label>Block Pricing Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetConversion__c</fullName>
        <description>Determines how this product is converted to asset.</description>
        <inlineHelpText>Indicates how this product is converted to asset.</inlineHelpText>
        <label>Asset Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One per quote line</fullName>
                    <default>true</default>
                    <label>One per quote line</label>
                </value>
                <value>
                    <fullName>One per unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetAmendmentBehavior__c</fullName>
        <description>Indicates how assets representing this product behave on amendments.</description>
        <inlineHelpText>Select a behavior when amending assets representing this product. By default, asset quantities cannot decrease unless an upgrade is added, and no refund is applied.</inlineHelpText>
        <label>Asset Amendment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Allow Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionBase__c</fullName>
        <description>Determines whether dynamic subscriptions are calculated off List or Net product price.</description>
        <inlineHelpText>Determines whether Percent of Total is calculated off List or Net product prices.</inlineHelpText>
        <label>Percent Of Total Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationType__c</fullName>
        <description>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</description>
        <inlineHelpText>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</inlineHelpText>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionCategory__c</fullName>
        <description>Subscription category for this product. Applies to all products and used to limit percent of total subscriptions to certain products.</description>
        <inlineHelpText>Use this to limit percent of total calculations to certain product categories. For example, software maintenance should only calculate percentage on products with a software maintenance percent of total category.</inlineHelpText>
        <label>Percent Of Total Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this product from appearing on the quote PDF.</description>
        <inlineHelpText>Excludes this product from appearing on the quote PDF.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationEvent__c</fullName>
        <description>Specifies when user is prompted to configure this product.</description>
        <inlineHelpText>Use this to control when Configure Products screen shows up for this product. Choose "Add" to limit to initial configuration. Choose "Edit" to subsequent configuration.</inlineHelpText>
        <label>Configuration Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ConfigurationType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicPricingConstraint__c</fullName>
        <description>Specifies constraints on dynamically calculated pricing.</description>
        <inlineHelpText>Use to place constraints on dynamically calculated prices.</inlineHelpText>
        <label>Percent Of Total Constraint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List price is minimum</fullName>
                </value>
                <value>
                    <fullName>List price is maximum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OptionSelectionMethod__c</fullName>
        <description>Determines how user selects options attached to this product. "Click" method presents options with checkboxes next to them. "Add" renders a button which brings up a dialog box with available options.</description>
        <inlineHelpText>Determines how user selects options attached to this product. "Click" method presents options with checkboxes next to them. "Add" renders a button which brings up a dialog box with available options.</inlineHelpText>
        <label>Option Selection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click</fullName>
                    <default>true</default>
                    <label>Click</label>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</description>
        <inlineHelpText>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewable</fullName>
                    <default>true</default>
                    <label>Renewable</label>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__IncludeInMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Includes products in percent of total calculations that are normally excluded (e.g.: subscription products).</description>
        <inlineHelpText>Check to always include this product in percent of total calculations (normally subscription products are excluded from percent of total calculations).</inlineHelpText>
        <label>Include In Percent Of Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredCodePattern__c</fullName>
        <description>Pattern used to generate product code (SKU) for configured products.</description>
        <inlineHelpText>Pattern used to generate product code (SKU) for configured products.</inlineHelpText>
        <label>Configured Code Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredDescriptionPattern__c</fullName>
        <description>Pattern used to generate dynamic product description for configured products.</description>
        <inlineHelpText>Pattern used to generate dynamic product description for configured products.</inlineHelpText>
        <label>Configured Description Pattern</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__NonPartnerDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as non-discountable for partners.</description>
        <inlineHelpText>Check to make this product non-discountable for partners.</inlineHelpText>
        <label>Non Partner Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFormTitle__c</fullName>
        <description>Title of the configuration form rendered from specified configuration fields.</description>
        <inlineHelpText>Title of the configuration form rendered from specified configuration fields.</inlineHelpText>
        <label>Configuration Form Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SortOrder__c</fullName>
        <description>Determines a default sort order of products in the Product Lookup page, and therefore the order in which they are added to the quote.</description>
        <inlineHelpText>Determines a default sort order of products in the Product Lookup page, and therefore the order in which they are added to the quote.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that replaces this product on renewal.</description>
        <inlineHelpText>Product that replaces this product on renewal. Use this to quote a different SKU when renewing.</inlineHelpText>
        <label>Renewal Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Original Products</relationshipLabel>
        <relationshipName>OriginalProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Effective product on which maintenance should calculate.</description>
        <inlineHelpText>Use this field to override a product that is included in a percent of total calculation. Point this lookup to a product with a list price you would like to use for the current product’s Percent of Total calculations.</inlineHelpText>
        <label>Percent Of Total Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Targeting Products</relationshipLabel>
        <relationshipName>SubscriptionTargetingProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionLayout__c</fullName>
        <description>Determines how options are presented to users.</description>
        <inlineHelpText>Determines how options are presented to users.</inlineHelpText>
        <label>Option Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sections</fullName>
                </value>
                <value>
                    <fullName>Tabs</fullName>
                </value>
                <value>
                    <fullName>Wizard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this product is taxable.</description>
        <inlineHelpText>Indicates whether this product is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule for use with this product</description>
        <inlineHelpText>Discount schedule for use with this product</inlineHelpText>
        <label>Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quantity Discounted Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether cost for this product may be modified on individual quotes.</description>
        <inlineHelpText>Controls whether cost for this product may be modified on individual quotes.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule used as a Cost Schedule with this product.</description>
        <inlineHelpText>Discount schedule used as a Cost Schedule with this product.</inlineHelpText>
        <label>Cost Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Products (Cost Schedule)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this product is optional or not by default. Optional products don't contribute to quote total or get transferred to the opportunity.</description>
        <inlineHelpText>Select if this product is optional by default. Optional products don't contribute to quote total or get transferred to the opportunity.</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeFromMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this product from percent of total maintenance calculations.</description>
        <inlineHelpText>Check to always exclude this product from percent of total calculations (normally non-subscription products are included in percent of total calculations).</inlineHelpText>
        <label>Exclude From Percent Of Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPercent__c</fullName>
        <description>Percent of non-subscription total to be used as the price of this subscription.</description>
        <inlineHelpText>Percent of non-subscription total to be used as the price of this subscription.</inlineHelpText>
        <label>Percent Of Total (%)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DescriptionLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates this product's description is locked (not editable on the quote).</description>
        <inlineHelpText>Flag that indicates this product's description is locked (not editable on the quote).</inlineHelpText>
        <label>Lock Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeFromOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this product should be excluded from transfer to the Opportunity.</description>
        <inlineHelpText>Indicates this product should not be transferred to the opportunity.</inlineHelpText>
        <label>Exclude From Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Specifies the starting quantity of the product when added.</description>
        <inlineHelpText>Specify the starting quantity of the product when added.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>Quantity in one batch for products sold in batches. Quantity entered in quote line will be divided by this number.</description>
        <inlineHelpText>Non-blank value designates this product is sold in batches. Enter quantity in each batch. Quantity entered in quote will be divided by this value and rounded up to the nearest integer.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Component__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as a component, excluding it from selection in product lookup.</description>
        <inlineHelpText>Marks this product as a component, excluding it from selection in product lookup.</inlineHelpText>
        <label>Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Quantity Scale</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>external id</label>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>